feat: 新增除錯模式設定功能
在選項頁面中加入除錯模式的開關，並在程式中實作相關的除錯資訊顯示。更新背景和內容腳本以支援此功能，並確保在儲存設定時能夠保存除錯模式的狀態。

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,6 @@
     "scripting",
     "storage"
   ],
-  "options_page": "options.html",
   "action": {
     "default_popup": "popup.html",
     "default_title": "Google Map 羅盤"
@@ -19,7 +18,7 @@
   "content_scripts": [
     {
       "matches": [
-        "https://www.google.com/maps/*"
+        "<all_urls>"
       ],
       "js": [
         "content.js"
