feat(eventHandler): 重構事件處理邏輯，新增事件處理類別以簡化代碼結構，移除英文字母判斷和隱藏輸入框相關的程式碼。
- 將事件處理邏輯移至 LuopanEventHandler 類別，提升可讀性和可維護性。
- 移除原有的事件處理程式碼，改用事件處理類別進行管理。
- 更新 manifest.json 以正確載入 eventHandler.js。

--- a/manifest.json
+++ b/manifest.json
@@ -17,18 +17,15 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ]
+      "matches": ["*://*.google.com/maps/*"],
+      "js": ["eventHandler.js", "content.js"]
     }
   ],
   "web_accessible_resources": [
     {
       "resources": [
-        "LuoPan.png"
+        "LuoPan.png",
+        "eventHandler.js"
       ],
       "matches": [
         "<all_urls>"
