refactor: 重構羅盤功能，新增核心模組與 UI 元件管理，改善代碼結構與可維護性

--- a/manifest.json
+++ b/manifest.json
@@ -18,14 +18,23 @@
   "content_scripts": [
     {
       "matches": ["*://*.google.com/maps/*"],
-      "js": ["eventHandler.js", "content.js"]
+      "js": [
+        "modules/core.js", 
+        "modules/uiComponents.js", 
+        "modules/positionManager.js", 
+        "eventHandler.js", 
+        "content.js"
+      ]
     }
   ],
   "web_accessible_resources": [
     {
       "resources": [
         "LuoPan.png",
-        "eventHandler.js"
+        "eventHandler.js",
+        "modules/core.js",
+        "modules/uiComponents.js",
+        "modules/positionManager.js"
       ],
       "matches": [
         "<all_urls>"
