--- a/manifest.json
+++ b/manifest.json
@@ -6,41 +6,31 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html",
     "default_title": "風水羅盤套圖"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["*://*.google.com/maps/*"],
-      "js": [
-        "modules/core.js", 
-        "modules/uiComponents.js", 
-        "modules/positionManager.js", 
-        "eventHandler.js", 
-        "content.js"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["modules/core.js", "modules/positionManager.js", "modules/uiComponents.js", "content.js"],
+      "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "LuoPan.png",
-        "eventHandler.js",
-        "modules/core.js",
-        "modules/uiComponents.js",
-        "modules/positionManager.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
-    }
-  ],
+  "web_accessible_resources": [{
+    "resources": ["LuoPan.png"],
+    "matches": ["<all_urls>"]
+  }],
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
