refactor: 重構事件處理模組與核心除錯功能

--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "manifest_version": 3,
   "name": "風水羅盤套圖",
   "version": "1.0",
-  "description": "在任何網站疊加可拖曳和縮放的 PNG 圖片。",
+  "description": "在任何網站上（如GoogleMap 或賣房網上的格局圖）疊加可拖曳和縮放的 PNG 圖片。",
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -22,7 +23,13 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["modules/core.js", "modules/positionManager.js", "modules/uiComponents.js", "content.js"],
+      "js": [
+        "modules/core.js",
+        "modules/positionManager.js",
+        "modules/uiComponents.js",
+        "eventHandler.js",
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
