feat: 新增背景控制器與訊息處理邏輯，重構事件處理與線條管理功能
- 新增線條管理器以處理線條繪製與清除功能
- 重構選項與彈出視窗控制器，整合設定頁面邏輯
- 更新 manifest 檔案以包含新的模組

--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
     "default_title": "風水羅盤套圖"
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
@@ -26,6 +25,7 @@
       "js": [
         "modules/core.js",
         "modules/positionManager.js",
+        "modules/lineManager.js",
         "modules/uiComponents.js",
         "eventHandler.js",
         "content.js"
