--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,7 @@
   "description": "在任何網站上（如GoogleMap 或賣房網上的格局圖）疊加可拖曳和縮放的 PNG 圖片。",
   "permissions": [
     "activeTab",
-    "scripting",
-    "storage",
-    "tabs"
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>"
