feat: 新增隱私權政策文件，明確說明資料收集與使用方式

--- a/manifest.json
+++ b/manifest.json
@@ -38,5 +38,6 @@
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
-  }
+  },
+  "privacy_policy": "https://raw.githubusercontent.com/boylovex/GoogleMapLuoPan/main/privacy-policy.md"
 }
